--- a/DiningPhilosophers.vcxproj
+++ b/DiningPhilosophers.vcxproj
@@ -124,10 +124,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="philosopher.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fork.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="randomizer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
